--- a/package.json
+++ b/package.json
@@ -11,16 +11,40 @@
   "repository": "https://github.com/thepulsewallet/tpw-mpc-core-kit.git",
   "author": "The Pulse Wallet",
   "license": "MIT",
+  "scripts": {
+    "prebuild": "rm -rf ./dist",
+    "build": "yarn run build:tsc && yarn run build:bundle.keystone",
+    "build:tsc": "tsc -p tsconfig.json",
+    "test": "jest"
+  },
   "dependencies": {
-    "typescript": "^5.2.2"
+    "@ethersproject/bytes": "^5.7",
+    "@safeheron/crypto-ecies": "^1.0.0",
+    "@safeheron/two-party-ecdsa-js": "^1.0.1",
+    "bn.js": "^5.2.1",
+    "crypto-js": "^4.1.1",
+    "elliptic": "^6.5.4",
+    "ethers": "^5.7",
+    "pako": "^2.1.0",
+    "safe-buffer": "^5.2.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/bn.js": "^5.1.3",
+    "@types/elliptic": "^6.4.16",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.7",
+    "@types/pako": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
