--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,48 @@
+//{
+//  "ts-node": {
+//    "compilerOptions": {
+//      "module": "CommonJS"
+//    }
+//  },
+//  "compilerOptions": {
+//    "outDir": "dist",
+//    "baseUrl": ".",
+//    "rootDir": "src",
+//    "allowJs": true,
+//    "allowUnusedLabels": false,
+//    "allowUnreachableCode": false,
+//    "noFallthroughCasesInSwitch": true,
+//    "noUncheckedIndexedAccess": true,
+//    "noUnusedLocals": true,
+//    "noUnusedParameters": true,
+//    "forceConsistentCasingInFileNames": true,
+//    "declaration": true,
+//    "sourceMap": true,
+//    "resolveJsonModule": true,
+//    "esModuleInterop": true,
+//    "module": "CommonJS",
+//    "target": "ES6"
+//  },
+//  "include": ["src", "test"],
+//  "exclude": ["dist", "bundle", "node_modules"]
+//}
 {
   "compilerOptions": {
+    // "composite": true,
+    "allowJs": true,
+    "target": "ES6",
     "outDir": "dist",
-    "baseUrl": ".",
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "src",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "declaration": true,
-    "sourceMap": true,
-    "resolveJsonModule": true
+    "declarationDir": "dist",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "lib": ["ES6", "DOM"],
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src", "test"],
-  "exclude": ["dist", "bundle", "node_modules"]
+  "compileOnSave": false,
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "./test"]
 }
