--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,5 +44,5 @@
   },
   "compileOnSave": false,
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "./test"]
+  "exclude": ["node_modules"]
 }
