--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,6 @@
     "typeRoots": ["node_modules/@types"]
   },
   "compileOnSave": false,
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules"]
 }
